@@ -8,10 +8,12 @@ import com.codewithmajd.order_service.model.Order;
 import com.codewithmajd.order_service.model.OrderLineItems;
 import com.codewithmajd.order_service.repo.OrderRepo;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import java.util.Arrays;
 import java.util.List;
@@ -19,15 +21,27 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 @Transactional
 public class OrderService {
 
     private final WebClient.Builder webClientBuilder;
     private final OrderRepo orderRepo;
     private final KafkaTemplate<String, OrderPlacedEvent> kafkaTemplate;
+    private final String inventoryServiceUrl;
+
+    public OrderService(WebClient.Builder webClientBuilder,
+                        OrderRepo orderRepo,
+                        KafkaTemplate<String, OrderPlacedEvent> kafkaTemplate,
+                        @Value("${inventory.service.url}") String inventoryServiceUrl) {
+        this.webClientBuilder = webClientBuilder;
+        this.orderRepo = orderRepo;
+        this.kafkaTemplate = kafkaTemplate;
+        this.inventoryServiceUrl = inventoryServiceUrl;
+    }
+
 
     public void placeOrder(OrderRequest orderRequest, String tenantId) {
+        // ... (setting orderNumber, tenantId, and creating orderLineItemsList is the same)
         Order order = new Order();
         order.setOrderNumber(UUID.randomUUID().toString());
         order.setTenantId(tenantId);
@@ -36,33 +50,35 @@ public class OrderService {
                 .stream()
                 .map(this::mapToDto)
                 .collect(Collectors.toList());
-
         order.setOrderLineItemsList(orderLineItemsList);
 
         List<String> skuCodes = orderLineItemsList.stream()
                 .map(OrderLineItems::getSkuCode)
-                .collect(Collectors.toList());
+                .toList();
 
-        // Call Inventory Service
+        // --- CHANGE 2: BUILD THE URI DYNAMICALLY ---
+        String inventoryCheckUri = UriComponentsBuilder.fromHttpUrl(inventoryServiceUrl)
+                .path("/api/inventory")
+                .queryParam("skuCode", skuCodes)
+                .build().toUriString();
+
         InventoryResponse[] inventoryResponses = webClientBuilder.build().get()
-                .uri("http://inventory-service/api/inventory",
-                        uriBuilder -> uriBuilder.queryParam("skuCode", skuCodes).build())
+                .uri(inventoryCheckUri) // Use the dynamically built URI
                 .header("X-Tenant-ID", tenantId)
                 .retrieve()
                 .bodyToMono(InventoryResponse[].class)
                 .block();
 
+        // ... (The rest of the validation logic is the same)
         // Validate SKU existence
         List<String> foundSkus = Arrays.stream(inventoryResponses)
                 .map(InventoryResponse::getSkuCode)
                 .toList();
-
         for (String sku : skuCodes) {
             if (!foundSkus.contains(sku)) {
                 throw new IllegalArgumentException("SKU not found in inventory: " + sku);
             }
         }
-
         // Validate quantity
         boolean allInStock = orderLineItemsList.stream().allMatch(orderItem ->
                 Arrays.stream(inventoryResponses).anyMatch(inventoryItem ->
@@ -73,12 +89,16 @@ public class OrderService {
         );
 
         if (allInStock) {
-            // Save order
             orderRepo.save(order);
             kafkaTemplate.send("notificationTopic", new OrderPlacedEvent(order.getOrderNumber(), tenantId));
-            // Reduce stock by sending POST request to inventory-service
+
+            // --- CHANGE 3: USE THE CONFIGURED URL FOR REDUCE-STOCK ---
+            String reduceStockUri = UriComponentsBuilder.fromHttpUrl(inventoryServiceUrl)
+                    .path("/api/inventory/reduce-stock")
+                    .build().toUriString();
+
             webClientBuilder.build().put()
-                    .uri("http://inventory-service/api/inventory/reduce-stock")
+                    .uri(reduceStockUri)
                     .header("X-Tenant-ID", tenantId)
                     .bodyValue(orderLineItemsList)
                     .retrieve()
@@ -87,7 +107,6 @@ public class OrderService {
         } else {
             throw new IllegalArgumentException("One or more products are out of stock or quantity is insufficient.");
         }
-
     }
 
     public List<Order> getAllOrders(String tenantId) {
